stylesheets/common.css
body
{
    background-color: #ecf0f1;
    color: #444;
    font-family: "Myriad Pro", "Segoe UI", "Segoe UI Symbol", "Source Han Sans", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
    font-size: 16px;
    margin: 0;
    padding: 0 48px;
}

a
{
    color: inherit;
    text-decoration: none;
}

button, input, textarea
{
    font-family: inherit;
}

.header
{
    background-color: #2c3e50;
    box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.4);
    color: #fafafa;
    display: flex;
    justify-content: space-between;
    left: 0;
    position: fixed;
    top: 0;
    white-space: nowrap;
    width: 100%;
}

.title
{
    font-size: 24px;
    line-height: 48px;
    margin: 0;
    padding: 0 0.5em;
}

.header-right
{
    align-items: center;
    display: flex;
}

.search-form
{
    display: flex;
    margin-right: 12px;
}

.search-textbox, .search-button
{
    box-sizing: border-box;
    font-size: 16px;
    height: 24px;
}

.search-textbox
{
    background-color: rgba(255, 255, 255, 0.9);
    border: none;
    outline: none;
    padding: 0 24px 0 0.25em;
    width: 160px;
}

.search-textbox:focus
{
    background-color: white;
}

.search-textbox::-ms-clear
{
    display: none;
}

.search-button
{
    background-color: transparent;
    border: none;
    cursor: pointer;
    margin-left: -24px;
    padding: 0;
    width: 24px;
}

.nav-list
{
    display: flex;
    margin: 0;
    padding: 0;
}

.nav-list > li
{
    list-style-type: none;
}

.selected-page
{
    background-color: #456f9e;
}

.nav-list > li > a
{
    display: block;
    line-height: 48px;
    padding: 0 1em;
}

.nav-list > li > a:hover
{
    background-color: rgba(255, 255, 255, 0.2);
}

.main
{
    display: block; /* IE doesn't recognize <main> element. */
    margin: 96px auto 48px auto;
    max-width: 960px;
}

.post
{
    box-sizing: border-box;
    padding: 0 24px 8px;
    font-family: "Minion Pro", "Cambria", "Segoe UI Symbol", "SimSun", sans-serif;
    background-color: white;
    border-radius: 2px;
    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
}

.post > header
{
    margin: 0 -24px 24px;
    background-color: #2980b9;
    color: #fafafa;
}

.post > header > h1, .post > h2, .post > h3, .post > h4, .post > h5, .post > h6
{
    font-family: "Myriad Pro", "Segoe UI", "Segoe UI Symbol", "Source Han Sans", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
}

.post > header > h1
{
    font-size: 18px;
    margin: 0;
    padding: 0.75em;
}

.post > h2
{
    margin: 1.5em 0;
    border-bottom: 2px solid;
    font-size: 29.296875px;
    font-weight: lighter;
    color: #e74c3c;
}

.post > h3, .post > h4, .post > h5, .post > h6
{
    padding-left: 0.5em;
    border-left-style: solid;
    border-left-width: 0.25em;
    font-weight: lighter;
}

.post > h3
{
    font-size: 23.4375px;
    color: #37d;
}

.post > h4
{
    font-size: 18.75px;
    margin-left: 16px;
    color: #293;
}

.post > h5
{
    font-size: 15px;
    margin-left: 32px;
    color: #b81;
}

.post > h6
{
    font-size: 12px;
    margin-left: 48px;
    color: #85b;
}

.post > table
{
    border-collapse: collapse;
    margin: 1em auto;
}

.post > table > thead
{
    background-color: #e74c3c;
    color: #fafafa;
}

.post > table > thead > tr > th
{
    text-align: left;
}

.post > table > tbody > tr:nth-child(even)
{
    background-color: rgba(0, 0, 0, 0.05);
}

.post > table > tbody > tr > td, .post > table > thead > tr > th
{
    padding: 0.5em;
}

.post > table > tbody > tr > td:first-child /* For most name columns */
{
    white-space: nowrap;
}

.post a:link
{
    color: #3498db;
    text-decoration: none;
}

.post a:visited
{
    color: #84c1eb;
}

.post a:hover
{
    text-decoration: underline;
}

.post a:active
{
    color: #2f7fb4;
}

.footer
{
    margin: 48px 0;
    color: #666;
    font-size: 12px;
    text-align: center;
}

